#50476 - Show recaptcha with fixed z-index

--- a/components/01-globals/_base/_base.scss
+++ b/components/01-globals/_base/_base.scss
@@ -37,7 +37,3 @@ dt,
 dd {
     margin: 0;
 }
-
-.field-recaptcha {
-    @include visually-hidden();
-}
